# MermaidPreview

./: .gitignore  260429_090959_audit_report_v2.md  260429_093322_audit_report_v3.md  260430_112439_audit_report_v4_perf_sec.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  README_zh-TW.md  exports.def
bun-renderer/: package.json  renderer.ts  test.ts  test2.ts  test3.ts
include/: etlframe.h  plugin.h  resource.h
resources/: MermaidPreview.rc
src/: BunRenderer.cpp  BunRenderer.h  DllMain.cpp  MarkdownParser.cpp  MarkdownParser.h  MermaidPreview.cpp  MermaidPreview.h  WebView2Manager.cpp  WebView2Manager.h
test/: 260219_190600_link_test.md  target.md
test/docs/: spec.md
